--- a/assets/css/cmd.css
+++ b/assets/css/cmd.css
@@ -4,7 +4,7 @@ background-color:#396DA5;
 margin:0px;
 padding:0px;
 color:#fff;
-font:"msharp dg console";
+font:"Consolas";
 font-size:14px;}
 .window {
 border:6px #ccc outset;
